# VBoxVmService

./: .gitignore  CMakeLists.txt  ChangeLog.md  README.md  do_build.bat  setup.iss
.github/workflows/: build.yml
doc/: History.txt  Howto.txt  Licence.txt  VBoxVmService.ini
src/: .gitignore  Util.cpp  Util.h  VBoxVmPipeManager.cpp  VBoxVmService.cpp  VBoxVmService.rc  VBoxVmService.sln  VBoxVmService.vcxproj  VirtualBox.h  VirtualBox_i.c  VmServiceControl.cpp  VmServiceControl.vcxproj  VmServiceTray.cpp  VmServiceTray.rc  VmServiceTray.vcxproj  build.bat  package.bat  resource.h  setup.iss
vms/: VBoxVmService.ini
vms/doc/: History.txt  Howto.txt  Instructions_DE.txt  Instructions_EN.txt  Licence.txt  VBoxVmService-Manual-english.rtf
vms/src/: .gitignore  Util.cpp  Util.h  VBoxVmPipeManager.cpp  VBoxVmPipeManager.h  VBoxVmService.cpp  VBoxVmService.rc  VBoxVmService.sln  VBoxVmService.vcproj  VBoxVmService.vcxproj  VirtualBox.h  VirtualBox_i.c  VmServiceControl.cpp  VmServiceControl.rc  VmServiceControl.vcproj  VmServiceControl.vcxproj  VmServiceTray.cpp  VmServiceTray.rc  VmServiceTray.vcxproj  build.bat  package.bat  resource.h  resource1.h
vms/src/bat/: shutdown.bat  startup.bat
vms/src/c#/bcompile/: bcompile.sln
vms/src/c#/bcompile/bcompile/: Program.cs  bcompile.csproj
vms/src/c++/VBoxVmServiceProject/: VBoxVmService.cpp  VBoxVmService.dsp  VBoxVmService.ini  VBoxVmService.sln
vms/src/c++/sleep/: sleep.DSP  sleep.c  sleep.sln  sleep.vcproj
vms/src/c++/sleep/Debug/: mt.dep  vc80.idb
vms/src/c++/sleep/Release/: mt.dep  vc80.idb
(+4 files in other folders)
